binutils-gdb: Build GDB with a C++ compiler

--- a/open_issues/binutils.mdwn
+++ b/open_issues/binutils.mdwn
@@ -340,297 +340,6 @@ Last reviewed up to Git commit f245535cf583ae4ca13b10d47b3c7d3334593ece
         {+      }+}
 
 
-  * `--enable-build-with-cxx` is now the default for GDB.  But, the x86
-    GNU/Hurd GDB port is not yet ready:
-
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void fetch_fpregs(regcache*, proc*)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:64:37: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) &state, &count);
-                                             ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void store_fpregs(const regcache*, proc*, int)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:154:37: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) &state, &count);
-                                             ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c:167:53: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) &state, i386_FLOAT_STATE_COUNT);
-                                                             ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void i386_gnu_dr_get(i386_debug_state*, proc*)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:285:35: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) regs, &count);
-                                           ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void i386_gnu_dr_set(const i386_debug_state*, proc*)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:299:51: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) regs, i386_DEBUG_STATE_COUNT);
-                                                           ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void i386_gnu_dr_set_control_one(proc*, void*)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:310:28: error: invalid conversion from 'void*' to 'long unsigned int*' [-fpermissive]
-           unsigned long *control = arg;
-                                    ^
-        ../../W._C._Handy/gdb/i386gnu-nat.c: In function 'void i386_gnu_dr_set_addr_one(proc*, void*)':
-        ../../W._C._Handy/gdb/i386gnu-nat.c:340:31: error: invalid conversion from 'void*' to 'reg_addr*' [-fpermissive]
-           struct reg_addr *reg_addr = arg;
-                                       ^
-        In file included from ../../W._C._Handy/gdb/gnu-nat.c:38:0:
-        /usr/include/hurd.h: In function 'int __hurd_fail(error_t)':
-        /usr/include/hurd.h:60:11: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               err = EIEIO;
-                   ^
-        /usr/include/hurd.h:64:11: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               err = ENOMEM;
-                   ^
-        /usr/include/hurd.h:68:11: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               err = EINVAL;
-                   ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'natural_t* proc_get_state(proc*, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:372:48: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (thread_state_t) &proc->state, &state_size);
-                                                        ^
-        In file included from /usr/include/mach/mach_types.h:46:0,
-                         from /usr/include/mach.h:28,
-                         from ./nm.h:23,
-                         from ../../W._C._Handy/gdb/defs.h:521,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:23:
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t proc_get_exception_port(proc*, mach_port_t*)':
-        ../../W._C._Handy/gdb/gnu-nat.c:394:12: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             return task_get_exception_port (proc->port, port);
-                    ^
-        In file included from /usr/include/mach/mach_types.h:48:0,
-                         from /usr/include/mach.h:28,
-                         from ./nm.h:23,
-                         from ../../W._C._Handy/gdb/defs.h:521,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:23:
-        ../../W._C._Handy/gdb/gnu-nat.c:396:12: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             return thread_get_exception_port (proc->port, port);
-                    ^
-        In file included from /usr/include/mach/mach_types.h:46:0,
-                         from /usr/include/mach.h:28,
-                         from ./nm.h:23,
-                         from ../../W._C._Handy/gdb/defs.h:521,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:23:
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t proc_set_exception_port(proc*, mach_port_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:405:12: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             return task_set_exception_port (proc->port, port);
-                    ^
-        In file included from /usr/include/mach/mach_types.h:48:0,
-                         from /usr/include/mach.h:28,
-                         from ./nm.h:23,
-                         from ../../W._C._Handy/gdb/defs.h:521,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:23:
-        ../../W._C._Handy/gdb/gnu-nat.c:407:12: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             return thread_set_exception_port (proc->port, port);
-                    ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void proc_steal_exc_port(proc*, mach_port_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:441:21: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               error_t err = 0;
-                             ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void proc_restore_exc_port(proc*)':
-        ../../W._C._Handy/gdb/gnu-nat.c:484:21: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               error_t err = 0;
-                             ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'proc* make_proc(inf*, mach_port_t, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:574:19: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-                 &prev_port);
-                           ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_startup(inf*, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:724:49: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-                MACH_PORT_RIGHT_RECEIVE, &inf->event_port);
-                                                         ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_set_pid(inf*, pid_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:748:64: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               error_t err = proc_pid2task (proc_server, pid, &task_port);
-                                                                        ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_validate_procinfo(inf*)':
-        ../../W._C._Handy/gdb/gnu-nat.c:799:56: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-                 (procinfo_t *) &pi, &pi_len, &noise, &noise_len);
-                                                                ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_validate_task_sc(inf*)':
-        ../../W._C._Handy/gdb/gnu-nat.c:829:53: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-              (procinfo_t *) &pi, &pi_len, &noise, &noise_len);
-                                                             ^
-        In file included from /usr/include/hurd/userlink.h:27:0,
-                         from /usr/include/hurd/port.h:25,
-                         from /usr/include/hurd.h:41,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:38:
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_set_traced(inf*, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:127:69: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-                                                                             ^  
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:879:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf, msg_set_init_int (msgport, refport,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:879:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf, msg_set_init_int (msgport, refport,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:879:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf, msg_set_init_int (msgport, refport,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:141:11: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-            : EIEIO)
-                   ^
-        ../../W._C._Handy/gdb/gnu-nat.c:879:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf, msg_set_init_int (msgport, refport,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_validate_procs(inf*)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1010:69: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               error_t err = task_threads (task->port, &threads, &num_threads); 
-                                                                             ^  
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_signal(inf*, gdb_signal)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1327:17: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           error_t err = 0;
-                         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1359:43: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-                  e->exception, e->code, e->subcode);
-                                                   ^
-        In file included from /usr/include/hurd/userlink.h:27:0,
-                         from /usr/include/hurd/port.h:25,
-                         from /usr/include/hurd.h:41,
-                         from ../../W._C._Handy/gdb/gnu-nat.c:38:
-        ../../W._C._Handy/gdb/gnu-nat.c:127:69: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-                                                                             ^  
-        ../../W._C._Handy/gdb/gnu-nat.c:1372:2: note: in expansion of macro 'INF_MSGPORT_RPC'
-          INF_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1372:2: note: in expansion of macro 'INF_MSGPORT_RPC'
-          INF_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1372:2: note: in expansion of macro 'INF_MSGPORT_RPC'
-          INF_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:69: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-                                                                             ^  
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1395:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1395:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:127:3: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           HURD_MSGPORT_RPC (proc_getmsgport (proc_server, inf->pid, &msgport), \
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:138:8: note: in expansion of macro 'INF_MSGPORT_RPC'
-          __e = INF_MSGPORT_RPC (inf, rpc_expr); \
-                ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1395:2: note: in expansion of macro 'INF_RESUME_MSGPORT_RPC'
-          INF_RESUME_MSGPORT_RPC (inf,
-          ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1394:11: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               err =
-                   ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void inf_continue(inf*)': 
-        ../../W._C._Handy/gdb/gnu-nat.c:1416:60: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           error_t err = proc_pid2proc (proc_server, inf->pid, &proc);
-                                                                    ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1422:33: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-               err = proc_mark_cont (proc);
-                                         ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'ptid_t gnu_wait(target_ops*, ptid_t, target_waitstatus*, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1497:70: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-          proc_wait_request (proc_server, inf->event_port, inf->pid, WUNTRACED);
-                                                                              ^ 
-        ../../W._C._Handy/gdb/gnu-nat.c:1521:42: error: invalid conversion from 'mach_msg_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             MACH_MSG_TIMEOUT_NONE, MACH_PORT_NULL);
-                                                  ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t S_exception_raise_request(mach_port_t, mach_port_t, thread_t, task_t, int, int, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1652:43: error: ambiguating new declaration of 'error_t S_exception_raise_request(mach_port_t, mach_port_t, thread_t, task_t, int, int, int)'
-               int exception, int code, int subcode)
-                                                   ^
-        In file included from ../../W._C._Handy/gdb/gnu-nat.c:66:0:
-        ./exc_request_S.h:19:15: note: old declaration 'kern_return_t S_exception_raise_request(mach_port_t, mach_port_t, mach_port_t, mach_port_t, integer_t, integer_t, integer_t)'
-         kern_return_t S_exception_raise_request
-                       ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1668:9: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-          return 0;
-                 ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1730:10: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           return 0;
-                  ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t do_mach_notify_dead_name(mach_port_t, mach_port_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1747:68: error: ambiguating new declaration of 'error_t do_mach_notify_dead_name(mach_port_t, mach_port_t)'
-         do_mach_notify_dead_name (mach_port_t notify, mach_port_t dead_port)   
-                                                                            ^   
-        In file included from ../../W._C._Handy/gdb/gnu-nat.c:67:0:
-        ./notify_S.h:78:15: note: old declaration 'kern_return_t do_mach_notify_dead_name(mach_port_t, mach_port_t)'
-         kern_return_t do_mach_notify_dead_name
-                       ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1784:10: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           return 0;
-                  ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t S_proc_wait_reply(mach_port_t, error_t, int, int, rusage_t, pid_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1859:10: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           return 0;
-                  ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'error_t S_msg_sig_post_untraced_reply(mach_port_t, error_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1952:10: error: invalid conversion from 'int' to 'error_t {aka __error_t_codes}' [-fpermissive]
-           return 0;
-                  ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'mach_port_msgcount_t port_msgs_queued(mach_port_t)':
-        ../../W._C._Handy/gdb/gnu-nat.c:1964:67: error: invalid conversion from 'kern_return_t {aka int}' to 'error_t {aka __error_t_codes}' [-fpermissive]
-             mach_port_get_receive_status (mach_task_self (), port, &status);   
-                                                                           ^
-        ../../W._C._Handy/gdb/gnu-nat.c: In function 'void gnu_create_inferior(target_ops*, char*, char*, char**, int)':
-        ../../W._C._Handy/gdb/gnu-nat.c:2121:3: error: a function-definition is not allowed here before '{' token
-           {
-           ^
-        ../../W._C._Handy/gdb/gnu-nat.c:3471:1: error: expected '}' at end of input
-         }
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c: At global scope:
-        ../../W._C._Handy/gdb/gnu-nat.c:1227:1: warning: 'void inf_update_signal_thread(inf*)' defined but not used [-Wunused-function]
-         inf_update_signal_thread (struct inf *inf)
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1448:1: warning: 'ptid_t gnu_wait(target_ops*, ptid_t, target_waitstatus*, int)' defined but not used [-Wunused-function]
-         gnu_wait (struct target_ops *ops,
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:1990:1: warning: 'void gnu_resume(target_ops*, ptid_t, int, gdb_signal)' defined but not used [-Wunused-function]
-         gnu_resume (struct target_ops *ops,
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:2067:1: warning: 'void gnu_kill_inferior(target_ops*)' defined but not used [-Wunused-function]
-         gnu_kill_inferior (struct target_ops *ops)
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:2082:1: warning: 'void gnu_mourn_inferior(target_ops*)' defined but not used [-Wunused-function]
-         gnu_mourn_inferior (struct target_ops *ops)
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:2094:1: warning: 'int inf_pick_first_thread()' defined but not used [-Wunused-function]
-         inf_pick_first_thread (void)
-         ^
-        ../../W._C._Handy/gdb/gnu-nat.c:2113:1: warning: 'void gnu_create_inferior(target_ops*, char*, char*, char**, int)' defined but not used [-Wunused-function]
-         gnu_create_inferior (struct target_ops *ops,
-         ^
-
-    [[!message-id "87eg1z93za.fsf@euler.schwinge.homeip.net"]].
-
   * a932d108b10518994c873b38a363af9f21bc2e87..f245535cf583ae4ca13b10d47b3c7d3334593ece
 
     `gas/NEWS`: `Default to --enable-compressed-debug-sections=gas for
@@ -698,11 +407,12 @@ Last reviewed up to Git commit f245535cf583ae4ca13b10d47b3c7d3334593ece
 Here's a log of a binutils-gdb build run; this is from Git commit
 f245535cf583ae4ca13b10d47b3c7d3334593ece (2016-09-05), plus `PATH_MAX`
 hard-coded in `gdb/remote.c`, and `global_thread_id_to_ptid` used instead of
-`thread_id_to_pid` in `gdb/gnu-nat.c`, run on kepler.SCHWINGE
+`thread_id_to_pid` in `gdb/gnu-nat.c`,
+and C++ compatibility changes for the x86 GNU/Hurd port, run on kepler.SCHWINGE
 and laplace.SCHWINGE.
 
     $ export LC_ALL=C
-    $ ../W._C._Handy/configure --prefix="$PWD".install --enable-gold --enable-plugins --with-sysroot=/ SHELL=/bin/dash CC=gcc-6 CXX=g++-6 --disable-werror --disable-build-with-cxx 2>&1 | tee log_build
+    $ ../W._C._Handy/configure --prefix="$PWD".install --enable-gold --enable-plugins --with-sysroot=/ SHELL=/bin/dash CC=gcc-6 CXX=g++-6 --disable-werror 2>&1 | tee log_build
     [...]
     $ make 2>&1 | tee log_build_
     [...]
@@ -713,12 +423,9 @@ harmonized.  Debian GCC (which is used in the testsuite) likes to pass
 so we need to configure with support for plugins and
 sysroots.  In the GDB build, there are compiler diagnostics reported in the
 MIG-generated stub files; thus no `-Werror` until that is resolved.
-`--disable-build-with-cxx`, as the x86 GNU/Hurd GDB port is not ready.  See
-below.  This needs to be addressed soon, as GDB will soon *require a C++
-compiler*, [[!message-id "ab08f2c8-3b52-3a7a-2236-89833bd09129@redhat.com"]].
 
 This takes up around 1.7 GiB, and runs for [[19 min|performance#measure]] on
-kepler.SCHWINGE and [[24 min|performance#measure]] on laplace.SCHWINGE.
+kepler.SCHWINGE and [[30 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -755,6 +462,8 @@ formats, and more emulation vectors.
              THREAD_STATE_CLEAR_TRACED (state);
              ^
 
+    This is no longer seen after the switch to build with C++ instead of C.
+
   * fe19822761b4635f392875a186e48af446b40f41..7a63e9515491f21eaf07301df87d389def20e317:
 
     `-Wmissing-prototypes`
@@ -772,6 +481,9 @@ formats, and more emulation vectors.
         process_reply_S.c:343:24: warning: no previous prototype for 'process_reply_server' [-Wmissing-prototypes]
         msg_reply_S.c:165:24: warning: no previous prototype for 'msg_reply_server' [-Wmissing-prototypes]
         exc_request_S.c:157:24: warning: no previous prototype for 'exc_server' [-Wmissing-prototypes]
+
+    These are no longer seen after the switch to build with C++ instead of C
+    (but these files are built with `-x c`?).
 
   * `O_NOFOLLOW`
 
@@ -831,7 +543,7 @@ formats, and more emulation vectors.
     [...]
 
 This takes up around 250 MiB, and runs for [[0 min|performance#measure]] on
-kepler.SCHWINGE and [[3 min|performance#measure]] on laplace.SCHWINGE.
+kepler.SCHWINGE and [[2 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -857,7 +569,7 @@ so instead we apply an ugly hack to `gold/testsuite/Makefile`.
     $ make -k check RUNTESTFLAGS=CC_FOR_TARGET='gcc-6\ -fno-pie\ -fno-PIE\ -no-pie'\ CXX_FOR_TARGET='g++-6\ -fno-pie\ -fno-PIE\ -no-pie' CC_FOR_TARGET='gcc-6 -fno-pie -fno-PIE -no-pie' CXX_FOR_TARGET='g++-6 -fno-pie -fno-PIE -no-pie' 2>&1 | tee log_test
     [...]
 
-This runs for [[24 min|performance#measure]] on kepler.SCHWINGE and [[86
+This runs for [[23 min|performance#measure]] on kepler.SCHWINGE and [[86
 min|performance#measure]] on laplace.SCHWINGE.
 
 When running `make -k check 2>&1 | tee log_test`, at the end of the testsuite
