binutils-gdb: 1a9ccd70f9a75dc6b48d340059f28ef3550c107b (2016-11-23)

--- a/open_issues/binutils.mdwn
+++ b/open_issues/binutils.mdwn
@@ -47,8 +47,8 @@ git diff --patience --stat=$COLUMNS,$COLUMNS --patch --src-prefix=./ --dst-prefi
 
 -->
 
-Last reviewed up to Git commit f245535cf583ae4ca13b10d47b3c7d3334593ece
-(2016-09-05).
+Last reviewed up to Git commit 1a9ccd70f9a75dc6b48d340059f28ef3550c107b
+(2016-11-23).
 
   * Globally
 
@@ -405,8 +405,9 @@ Last reviewed up to Git commit f245535cf583ae4ca13b10d47b3c7d3334593ece
 # Build
 
 Here's a log of a binutils-gdb build run; this is from Git commit
-f245535cf583ae4ca13b10d47b3c7d3334593ece (2016-09-05), plus `PATH_MAX`
-hard-coded in `gdb/remote.c`, and `global_thread_id_to_ptid` used instead of
+1a9ccd70f9a75dc6b48d340059f28ef3550c107b (2016-11-23),
+plus `PATH_MAX` hard-coded in `gdb/inferior.c` and `gdb/remote.c`,
+and `global_thread_id_to_ptid` used instead of
 `thread_id_to_pid` in `gdb/gnu-nat.c`,
 and C++ compatibility changes for the x86 GNU/Hurd port, run on kepler.SCHWINGE
 and laplace.SCHWINGE.
@@ -424,8 +425,8 @@ so we need to configure with support for plugins and
 sysroots.  In the GDB build, there are compiler diagnostics reported in the
 MIG-generated stub files; thus no `-Werror` until that is resolved.
 
-This takes up around 1.7 GiB, and runs for [[19 min|performance#measure]] on
-kepler.SCHWINGE and [[30 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 1.8 GiB, and runs for [[22 min|performance#measure]] on
+kepler.SCHWINGE and [[25 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -542,8 +543,8 @@ formats, and more emulation vectors.
     $ make install 2>&1 | tee log_install
     [...]
 
-This takes up around 250 MiB, and runs for [[0 min|performance#measure]] on
-kepler.SCHWINGE and [[2 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 270 MiB, and runs for [[0 min|performance#measure]] on
+kepler.SCHWINGE and [[1 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -569,7 +570,7 @@ so instead we apply an ugly hack to `gold/testsuite/Makefile`.
     $ make -k check RUNTESTFLAGS=CC_FOR_TARGET='gcc-6\ -fno-pie\ -fno-PIE\ -no-pie'\ CXX_FOR_TARGET='g++-6\ -fno-pie\ -fno-PIE\ -no-pie' CC_FOR_TARGET='gcc-6 -fno-pie -fno-PIE -no-pie' CXX_FOR_TARGET='g++-6 -fno-pie -fno-PIE -no-pie' 2>&1 | tee log_test
     [...]
 
-This runs for [[23 min|performance#measure]] on kepler.SCHWINGE and [[86
+This runs for [[24 min|performance#measure]] on kepler.SCHWINGE and [[72
 min|performance#measure]] on laplace.SCHWINGE.
 
 When running `make -k check 2>&1 | tee log_test`, at the end of the testsuite
